# m2s2-rust-vulkan

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LEARNING_PATH.md  MATH_TODO.md  README.md  release-plz.toml
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  release-plz.yml
examples/: triangle.rs  window.rs
scripts/: check-commit-msg.sh
src/: error.rs  lib.rs  math.rs  window.rs
src/renderer/: buffer.rs  command.rs  device.rs  instance.rs  mod.rs  pipeline.rs  swapchain.rs
