[package]
name = "m2s2-rust-vulkan"
version = "0.1.0"
edition = "2021"

[dependencies]
# Vulkan bindings
ash = "0.37"
ash-window = "0.12"
# Window management
winit = "0.29"
raw-window-handle = "0.5"
# Math library (local)
m2s2-math = { path = "../m2s2-rust-math/m2s2-math" }
# Utility for safe transmutation
bytemuck = { version = "1.14", features = ["derive"] }
# Logging
log = "0.4"
env_logger = "0.10"
# Error handling
anyhow = "1.0"

[dev-dependencies]
# For examples and tests
pollster = "0.3"

[[example]]
name = "triangle"
path = "examples/triangle.rs"

[[example]]
name = "window"
path = "examples/window.rs"
